# agentic-playwright-framework

./: README.md
.playwright-mcp/: page-2026-05-21T18-22-08-137Z.yml  page-2026-05-21T18-22-23-357Z.yml  page-2026-05-21T18-22-38-088Z.yml  page-2026-05-21T18-23-02-148Z.yml  page-2026-05-21T18-23-27-516Z.yml  page-2026-05-21T18-26-07-307Z.yml  page-2026-05-21T18-26-10-543Z.yml  (+4 more)
automation/: .env.example  .gitignore  Makefile  README.md  pyproject.toml  pytest.ini
automation/config/: environments.yaml  settings.py
automation/docs/: adding_tests.md  failure_investigation.md  fixture_standard.md  framework_rules.md  locator_strategy.md  page_object_standard.md  test_data_standard.md
automation/framework/assertions/: README.md
automation/framework/data/: factories.py  test_data_loader.py
automation/framework/models/: checkout_customer.py  product.py  user.py
automation/framework/pages/: base_page.py  cart_page.py  checkout_complete_page.py  checkout_information_page.py  checkout_overview_page.py  inventory_page.py  login_page.py
automation/framework/reporting/: defect_summary.py  execution_summary.py
automation/framework/utils/: evidence.py  logger.py  paths.py
automation/reports/automation/: framework_setup_report.md  standard_user_checkout_suite_implementation_report.md
automation/reports/automation/reviews/: framework_scaffold_automation_review.md
automation/test_data/local/: checkout_customers.yaml  products.yaml  users.yaml
automation/tests/: conftest.py
automation/tests/ui/: test_framework_smoke.py  test_standard_user_checkout.py
(+49 files in other folders)
